criando funcionalidade de consultar uma candidatura